# blog-django-formset

./: .gitignore  LICENSE  pyproject.toml
books/: forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_rate.py
core/: settings.py
templates/: _base.html
templates/books/: forms.html
